--- a/coffee-shop-ui/src/app/components/menu/menu.component.html
+++ b/coffee-shop-ui/src/app/components/menu/menu.component.html
@@ -21,8 +21,8 @@
       ></app-language-popup>
     </li>
     <li>
-      <a>
-        <img src="../../../assets//images/Shopping Bag.png" cl />
+      <a routerLink="/shop-cart">
+        <img src="../../../assets//images/Shopping Bag.png" />
       </a>
     </li>
   </ul>
