--- a/coffee-shop-ui/src/app/components/shop-card/shop-card.component.html
+++ b/coffee-shop-ui/src/app/components/shop-card/shop-card.component.html
@@ -2,23 +2,24 @@
   class="w-[300px] h-[300px] xl:w-[400px] xl:h-[320px] bg-white relative rounded-[20px] flex flex-col items-center justify-between hover:transform hover:scale-105 transition-transform"
 >
   <img
-    src="{{ imageUrl }}"
-    alt="{{ title }}"
+    src="{{ product?.imageUrl }}"
+    alt="{{ product?.title }}"
     class="absolute -top-12 -left-16 w-64 h-48"
   />
   <p class="font-kranky text-2xl xl:text-3xl pl-20 pt-8">
-    {{ title }}
+    {{ product?.title }}
   </p>
   <p class="font-kufam pt-20 xl:pt-16 px-4 text-1xl xl:text-2xl">
-    {{ description }}
+    {{ product?.description }}
   </p>
   <p class="font-kufam text-center text-1xl xl:text-2xl pt-4 xl:pt-8">
-    {{ "price_per_KG" | translate }}: {{ price }}
+    {{ "price_per_KG" | translate }}: {{ product?.pricePerKg }}
   </p>
   <app-button
     text="{{ 'add_to_cart' | translate }}"
     horizontalMargin="4"
-    type="submit"
+    type="button"
     class="mb-4"
+    (click)="addItemToCart()"
   ></app-button>
 </div>
