--- a/coffee-shop-ui/src/app/components/input/input.component.html
+++ b/coffee-shop-ui/src/app/components/input/input.component.html
@@ -13,7 +13,7 @@
   <textarea
     class="font-kufam resize-none {{ width }}  {{
       height
-    }} bg-gray focus:border-gray outline-none text-lightbrown rounded-[10px] text-2xl pl-[10px]"
+    }} bg-gray focus:border-gray outline-none text-lightbrown rounded-[10px] text-2xl pl-[10px] pt-[16px]"
     *ngIf="placeholder === 'Message' || placeholder === 'Poruka'"
     [(ngModel)]="textareaValue"
     placeholder="{{ placeholder }}"
